--- a/Cucmber_Project/pom.xml
+++ b/Cucmber_Project/pom.xml
@@ -3,10 +3,12 @@
   <groupId>dtuGroup</groupId>
   <artifactId>Cucmber_Project</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  
   	<properties>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>	
+	
 	<dependencies>
 		<dependency>
 			<groupId>io.cucumber</groupId>
@@ -19,5 +21,24 @@
 			<version>7.2.3</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		  <groupId>org.openjfx</groupId>
+		  <artifactId>javafx-controls</artifactId>
+		  <version>19</version>
+	  </dependency>
 	</dependencies>
+	
+	  <build>
+	  <plugins>
+		  <plugin>
+			  <groupId>org.openjfx</groupId>
+			  <artifactId>javafx-maven-plugin</artifactId>
+			  <version>0.0.8</version>
+			  <configuration>
+				  <mainClass>View.View</mainClass>
+			  </configuration>
+		  </plugin>
+	  </plugins>
+  </build>
+	
 </project>
