--- a/Cucmber_Project/pom.xml
+++ b/Cucmber_Project/pom.xml
@@ -35,7 +35,7 @@
 			  <artifactId>javafx-maven-plugin</artifactId>
 			  <version>0.0.8</version>
 			  <configuration>
-				  <mainClass>View.View</mainClass>
+				  <mainClass>controller.Main</mainClass>
 			  </configuration>
 		  </plugin>
 	  </plugins>
