--- a/Cucmber_Project/pom.xml
+++ b/Cucmber_Project/pom.xml
@@ -26,6 +26,11 @@
 		  <artifactId>javafx-controls</artifactId>
 		  <version>19</version>
 	  </dependency>
+	  <dependency>
+		  <groupId>org.openjfx</groupId>
+		  <artifactId>javafx-media</artifactId>
+		  <version>19</version>
+	  </dependency>
 	</dependencies>
 	
 	  <build>
